<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">Within Reach</string>
    
    <!-- Options Menu Items -->
    <string name="action_settings">App Settings</string>
    <string name="action_refresh">Refresh Map</string>
 
    <string name="hello_world">Hello world!</string>
    <string name="menu_title">Main Menu</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="transit">Transit</string>
    <string name="main_button">Menu</string>
    <string name="select_transport_mode">Select Transportation Mode</string>
    <string name="menu_done">Done!</string>
    <string name="select_time">Select Time</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="license">License Information</string>
    <string name="init_seek_time">0 mins</string>
    <string name="action_refresh">REFRESH</string>
	<string name= "help_title">Help Menu</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="set_date_time_title">Set Date and Time</string>

    <string name="mode_descriptor_walk">Walking</string>
    <string name="mode_descriptor_bike">Biking</string>
    <string name="mode_descriptor_transit">Transit</string>
    <string name="delete_marker">Delete</string>
    <string name="search_map">Search Map</string>
    
    <!-- Place View Defaults -->
    <string name="default_name">No Name</string>
    <string name="default_phone">No Phone Number</string>
    <string name="default_rating">No Rating</string>
    <string name="default_address">No Address</string>
    <string name="direction_btn_txt">Directions</string>
    <string name="close_btn_txt">Close</string>
    

    
    <string name= "quest1">What is the objective of Within Reach?</string>
    <string name= "quest2">How to drop a pin?</string>
    <string name= "quest3">Time Adjust</string>
    <string name= "quest4">Transportation Modes</string>
    <string name= "quest5">Search Bar</string>
    <string name= "quest8">Search Bar Results</string>
    <string name= "quest6">Setting the Date</string>
    <string name= "quest7">Setting the Time</string>
    <string name= "answer1">Within Reach interfaces with the Open Trip Planner Analyst API, allowing you to see what destinations are within reach given specified time, day, and transportation mode constraints.</string>
    <string name= "answer2">In order to drop a pin on the map, please long hold your desired location and a pin will appear</string>
	<string name= "answer3">Adjust the time by navigating into the settings and selecting your desired time span.</string>
	<string name= "answer4">There are three different  transportation modes, a user is free to select one, two, or all three at one given time. To enable a  transportation mode, enter the settings menu and click on the desired mode.</string>
	<string name= "answer5">The search bar that appears at the top of the map displayed as a means to help locate local businesses within a specified time frame. </string>
	<string name= "answer6">Within Reach has the functionality to set a desired date in order to display a calculated prediction of how far a user could get on a specified day given the time and transportation mode constraints. Once the "Set Time" button is pressed, a calendar will be displayed and the user will be able to choose the date desired.</string>
	<string name= "answer7">Once the "Set Time" Button is selected from the main menu, the user will be prompted to choose a time. The hour, minute, and a choice of AM/PM will be selected in order to create a map illustration based on this given time. </string>
	<string name= "answer8">The use of the search bar enables the user to view various markers on the map that display the locations of the places found along their specified zone. These markers may be clicked in order to view an information window that displays the name of the place. Further information about a specific place, including the phone number, address, google place ratings and more, can be found by clicking the info window.</string>

    <string name="license_info">
        Copyright (c) 2013, Haneen Abu-Khater, Alex Flyte, Kyle Greene, Vi Nguyen, Clinton Olson, and Hanrong Zhao \n
All rights reserved.Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
1. Redistributions of source code must retain the above copyright notice, this
list of conditions and the following disclaimer.
2. Redistributions in binary form must reproduce the above copyright notice,
this list of conditions and the following disclaimer in the documentation
and/or other materials provided with the distribution.
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    </string>
    
    <string name="about_info">
        Within Reach \n\n
        Build: v1.0 \n\n
        Copyright (c) 2013, Haneen Abu-Khater, Alex Flyte, Kyle Greene, Vi Nguyen, Clinton Olson, and Hanrong Zhao
        
    </string>

    <!-- Error Messages -->
    <string name="error_fatal_loc_mgr">Fatal Error: Location Manager Error</string>
    <string name="error_no_provider">No Provider Available</string>
    <string name="error_provider_try_again">No Provider: Try Again</string>
	<string name="no_location_message">No Location Provided: Drop a Pin or Enable Android GPS</string>

</resources>
