<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/time_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_time"
        android:layout_marginTop="@dimen/menu_title_vertical_margin"
        android:layout_marginBottom="@dimen/menu_title_vertical_margin"  />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_seekbar_vertical_margin"
        android:layout_marginBottom="@dimen/menu_seekbar_vertical_margin"
        android:layout_marginLeft="@dimen/menu_seekbar_horizontal_margin"
        android:layout_marginRight="@dimen/menu_seekbar_horizontal_margin" />

    <TextView
        android:id="@+id/mode_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_transport_mode"
        android:layout_marginTop="@dimen/menu_title_vertical_margin"
        android:layout_marginBottom="@dimen/menu_title_vertical_margin" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/toggle_button0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/walk"
            android:textOn="@string/walk" />

        <ToggleButton
            android:id="@+id/toggle_button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/bike"
            android:textOn="@string/bike" />

        <ToggleButton
            android:id="@+id/toggle_button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/transit"
            android:textOn="@string/transit" />
    </LinearLayout>

    <Button
        android:id="@+id/menu_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/menu_done" />



</LinearLayout>